# VideoCapture

./: CMakeLists.txt  ClassifyVideoInference.py  ClassifyVideo_scenario.py  ClassifyVideo_scenario.sh  checkdirt.py  cut_save.h  filtering.py  gradcam.py  gradcam_30class.py  gradcam_demo.py  image_resizing.py  image_resizing_check.sh  make_scenario_folder.py  modify_resnet18.py  multi_gradcam_myvideo.py  scenario_checklist.py
classify_inference_scenario/: Makefile
classify_inference_scenario/src/: main.cpp
